Fixed header/nav alignment issues in css.

--- a/src/index.css
+++ b/src/index.css
@@ -24,56 +24,8 @@ body, html {
   line-height:30px ;
 }
 
-button {
-  background-color: #0067e8;
-  border: 0;
-  padding: 5px;
-  color: white;
-  font-weight: bold;
-  transition: background-color .1s;
-  cursor: pointer;
-  border-radius: 5px;
-  font-size: 16px;
-}
-
-button:hover {
-  background-color: yellow;
-  color: #ff0d7b;
-}
-
-textarea, input {
-  padding: .5%;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  height: 30px;
-  width: 100%;
-}
-
-textarea:focus, input:focus {
-  outline: none;
-  border: 2px solid #eaef3a;
-}
-
-textarea {
-  width: 100%;
-  min-height: 200px;
-  font-size: 15px;
-}
-
-form {
-  width:100%;
-}
-
-form > div {
-  margin-bottom: 2%;
-}
-
-form label {
-  display: block;
-}
-
 header {
-  height: 85px;
+  height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -83,17 +35,18 @@ header {
   position: -webkit-sticky;
   top: 0;
   z-index: 9999;
+  width: 100%
 }
 
 .head-container {
-  width: 80%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center; 
 }
 
 .right {
-  width: 60%;
+  width: 80%; /*change back to 100%*/
   text-align:left;
 }
 
@@ -148,34 +101,42 @@ header h1 a:hover {
 
 nav {
   font-weight: normal;
-  /* width:60%; */
-  text-align:right;
-  padding: 0px;
-  padding-top: 15px;
+  /* width:30%; */
+  /* text-align:right; */
+  /* padding: 0px; */
+  /* padding-top: 50px; */
+  /* padding-top: 15px; */
   letter-spacing: 2px;
+  margin-top: 20px;
+  width: 50%;
+
 }
 
 ul {
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
-  margin-top: 5px;
-  padding: 0px;
+  justify-content: space-between;
+  text-align:right;
+
+  /* margin-top: 5px;
+  padding: 5px; */
+  /* align-self: baseline; */
 }
 
 nav li , .navlink {
   color: #fff;
   font-size: 18px;
-  padding-left: 20px;
+  padding-right: 10px;
   text-decoration: none;
   transition: color .5s;
+  
 
 }
 
 nav  li:hover ,.navLink ,.active {
   color: #eaef3a;
 }
-
 
 a {
   text-decoration: none;
@@ -240,6 +201,54 @@ section {
 } 
 
 
+button {
+  background-color: #0067e8;
+  border: 0;
+  padding: 5px;
+  color: white;
+  font-weight: bold;
+  transition: background-color .1s;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+button:hover {
+  background-color: yellow;
+  color: #ff0d7b;
+}
+
+textarea, input {
+  padding: .5%;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  height: 30px;
+  width: 100%;
+}
+
+textarea:focus, input:focus {
+  outline: none;
+  border: 2px solid #eaef3a;
+}
+
+textarea {
+  width: 100%;
+  min-height: 200px;
+  font-size: 15px;
+}
+
+form {
+  width:100%;
+}
+
+form > div {
+  margin-bottom: 2%;
+}
+
+form label {
+  display: block;
+}
+
 .byline {
   font-size: 90% !important;
   margin-bottom: 15px;
@@ -267,14 +276,24 @@ footer {
   font-size:1.5em;
   line-height: 24px;
   text-align: center;
-  padding: 15px;
+  /* padding: 0px;
+  margin: 0px; */
   z-index: 9999;
+}
+
+footer p {
+  padding: 0px;
+  margin-top: 15px;
+  margin-bottom: 2px
 }
 
 .fab ,.fa-github, .fa-linkedin, .fa-twitter  {
   font-size: 25px;
   padding-right: 15px;
   padding-left: 15px;
+  margin: 0;
+  padding-top: 0;
+  padding-bottom: 0
 }
 
 .welcome {
@@ -284,13 +303,11 @@ footer {
   line-height: 0px;
 }
 
-.copytech {
-  font-size: 12px;
-  color: #fa4568;
-  letter-spacing: 2px;
+footer,.copyends {
+ padding-bottom: 10px;
 }
 
-.copyends {
+span ,.copyends {
   font-size: 12px;
   color: #fff;
   letter-spacing: 2px;
@@ -416,6 +433,15 @@ ul {
 
 nav li {
   font-size: 15px;
+}
+
+.fab ,.fa-github, .fa-linkedin, .fa-twitter  {
+  font-size: 15px;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin: 0;
+  padding-top: 0;
+  padding-bottom: 0
 }
 
 }
